# lapack-array2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-publish.yml  rust.yml
scripts/: bindgen.py
src/: lib.rs  prelude.rs
src/ffi/: lapack.rs  mod.rs
src/symmetric_eigenvalues/: mod.rs
src/symmetric_eigenvalues/standard_eig_driver/: mod.rs  syev.rs
src/util/: lapack_alloc.rs  lapack_error.rs  lapack_flags.rs  lapack_traits.rs  mod.rs  util_ndarray.rs
tests/: mod.rs  util.rs
tests/symmetric_eigenvalues/: mod.rs  test_syev.rs
